<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musique.ShopActivity">

    <LinearLayout
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/coverplayer"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/musicArtist"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/musicName"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>
                <TextView
                    android:textColor="@color/colorAccent"
                    android:text="@string/price"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>

            </LinearLayout>

            <ImageView
                android:src="@mipmap/ic_shop"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <CheckBox
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/coverplayer"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/musicArtist"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/musicName"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>
                <TextView
                    android:textColor="@color/colorAccent"
                    android:text="@string/price"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>

            </LinearLayout>

            <ImageView
                android:src="@mipmap/ic_shop"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <CheckBox
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/coverplayer"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/musicArtist"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/musicName"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>
                <TextView
                    android:textColor="@color/colorAccent"
                    android:text="@string/price"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>

            </LinearLayout>

            <ImageView
                android:src="@mipmap/ic_shop"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <CheckBox
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/coverplayer"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/musicArtist"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/musicName"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>
                <TextView
                    android:textColor="@color/colorAccent"
                    android:text="@string/price"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>

            </LinearLayout>

            <ImageView
                android:src="@mipmap/ic_shop"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <CheckBox
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/coverplayer"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/musicArtist"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/musicName"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>
                <TextView
                    android:textColor="@color/colorAccent"
                    android:text="@string/price"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>

            </LinearLayout>

            <ImageView
                android:src="@mipmap/ic_shop"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <CheckBox
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/coverplayer"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/musicArtist"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/musicName"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>
                <TextView
                    android:textColor="@color/colorAccent"
                    android:text="@string/price"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"/>

            </LinearLayout>

            <ImageView
                android:src="@mipmap/ic_shop"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <CheckBox
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="bottom"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addCart"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payGpay"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/homeButton"
                android:paddingHorizontal="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlayer"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/listButton"
                android:paddingHorizontal="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/buttonList"
                android:textAllCaps="true" />


        </LinearLayout>

        <TextView
            android:layout_marginLeft="72dp"
            android:layout_marginRight="20dp"
            android:layout_marginVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopText"/>

    </LinearLayout>

</ScrollView>
